--- a/wp-content/themes/understrap-child/sass/theme/partials/_global_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_global_styles.scss
@@ -53,7 +53,7 @@ $zindex-tooltip:                    1070 !default; */
         grid-color   : orange,
     ),
     64em: ( // 1024px
-        font-size    :8px,
+        font-size    :7px,
         line-height  : 1.5,
         modular-scale: perfect-fifth,
         grid-color   : purple,
@@ -204,4 +204,8 @@ body {
 
 .primary{
   color: $primary;
+}
+
+.overflow-hidden{
+  overflow: hidden;
 }
