--- a/wp-content/themes/understrap-child/sass/theme/partials/_navbar.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_navbar.scss
@@ -101,7 +101,7 @@ margin-right: $navbar-padding-x; */
   list-style: none;
   background: $navbar-nav-background;
   margin: $navbar-nav-margin;
-  @include vr($padding-top: 1);
+  // @include vr($padding-top: 1);
 
   .nav-link {
     padding-right: 0;
