--- a/wp-content/themes/understrap-child/sass/theme/partials/_modules_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_modules_styles.scss
@@ -1,52 +1,3 @@
-.s-expertise{
-&__body-container{
-
-}
-  &__header{
-@include container();
-background: $primary;
-@include vr($height: 6);
-color: $white;
-}
-&__graphic-element{
-  @include vr($margin-right: 1);
-  flex: 0 0 25%;
-  max-width: 4em;
-  height: 4em;
-  display: flex;
-  align-content: center;
-  justify-content: center;
-  // @include vr($margin-bottom: 1);
-
-  >svg {
-    width: 4em;
-    height: 4em;
-    display: block;
-    fill: $white;
-    // border: 1px solid lighten($black, 20%);
-  }
-}
-&__headline{
-  margin-top: 0;
-}
-&__headline-item {
-  flex: 0 0 auto;
-  display: flex;
-  justify-content: center;
-  margin-top: -1em;
-  height: auto;
-  max-width: 95%;
-  background: $pattens;
-  border-radius: .25em;
-  border: 1px solid $gray-500;
-  // @include vr($padding: 0.25 0.5, $margin-bottom: 1);
-  @include vr($margin-bottom: 1, $padding: .75 1.25);
-}
-
-&__body-list{
-  @include vr($margin-top: 1.5, $margin-bottom: 1.5);
-}
-}
 
 
 //*flex-container
@@ -55,6 +6,9 @@ color: $white;
 display: flex;
 flex-direction: column;
 align-items: center;
+@include mq('tablet-wide'){
+
+}
 }
 
 
@@ -68,3 +22,11 @@ align-items: center;
   min-height: 0;
 
 }
+
+.diagram__end-to-end--horizontal{
+  @include mq('tablet-wide'){
+    width: 100%;
+    height: auto;
+  }
+}
+
