--- a/wp-content/themes/understrap-child/sass/theme/partials/_style_tweaks.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_style_tweaks.scss
@@ -1,1 +1,20 @@
 //* MODULE STYLE TWEAKS  //
+
+.image--conference-table{
+@include mq('tablet-wide'){
+    width: 80%;
+}
+}
+
+.tungscreens--small{
+    @include mq('tablet-wide'){
+        width: 83%;
+    }
+}
+
+.conductor{
+    @include mq('tablet-wide'){
+        width: 90%;
+    }
+}
+
