--- a/wp-content/themes/understrap-child/sass/theme/partials/_graphics_and_artwork_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_graphics_and_artwork_styles.scss
@@ -479,9 +479,9 @@ svg.chev--dwn{
     stroke-width: .5em;
 }
 
-.circle-digit__01 path, .circle-digit__02 path, .circle-digit__03 path{
-fill: $white;
-}
+// .circle-digit__01 path, .circle-digit__02 path, .circle-digit__03 path{
+// fill: $white;
+// }
 
     #digits {
         color: $qualifications-icon-fill-color;
